--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 	<title>Bubi's Website</title>
 </head>
 <body>
-	<p>This is Bubi's Site</p>
+	<!-- HEADER -->
+	<div class="header">
+		<header>
+			<div class="title">Bubi Loves</div>
+			<nav class="mainnav">
+				<div class="nav1">1</div>
+				<div class="nav2">2</div>
+			</nav>
+		</header>
+	</div>
+	
+	<!-- MAIN -->
+	<div class="main">
+		<header>
+			<h3>Main</h3>
+			<h1>This is Bubi's Site</h1>
+			<h2>Hi Bubi</h2>
+		</header>
+	</div>
+
+	<!-- FOOTER -->
+	<div class="footer">
+		<header>
+			<h1>I am Footer</h1>
+		</header>
+	</div>
 </body>
 </html>
