--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 	<title>Bubi's Website</title>
 </head>
 <body>
-	<!-- HEADER -->
+	<!-- BANNER -->
 	<div class="header">
 		<header>
 			<div class="title">Bubi Loves</div>
-			<nav class="mainnav">
-				<div class="nav1">1</div>
-				<div class="nav2">2</div>
-			</nav>
-		</header>
+		</header>	
+	</div>
+
+	<div class="nav">
+  		<a class="active" href="#home">Home</a>
+ 		<a href="#initial">Initial</a>
+  		<a href="#story">The Story</a>
+  		<a href="#memorable">Memorable Moments</a>
 	</div>
 	
-	<!-- MAIN -->
-	<div class="main">
+	<!-- INITIAL -->
+	<div class="initial">
 		<header>
-			<h3>Main</h3>
-			<h1>This is Bubi's Site</h1>
-			<h2>Hi Bubi</h2>
+			<h1>Foreword</h1>
 		</header>
+		<img class="initialimg" src="img/initial.jpg" alt="Bubi">
 	</div>
 
 	<!-- FOOTER -->
