--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
 		<header>
 			<h1>Foreword</h1>
 		</header>
-		<img class="initialimg" src="img/initial.jpg" alt="Bubi">
+
+		<div class="initialimg">
+			<img src="img/initial.jpg" alt="Bubi" align="left">
+		</div>
+		
+		<p>Hi bubi, this is my months entry for the bi monthly monthsarry gift for you. <br> 
+			This site is just a compilation of the moments we have and a bit for our backstory, <br>
+			This site is made for you but if you wanna share this with someone else to brag or sumn kay feel free.</p>
 	</div>
+	
 
 	<!-- FOOTER -->
 	<div class="footer">
